# congruity-cone-toy

./: README.md  pyproject.toml
docs/: admissibility_vs_prediction.md  concept.md
src/: __init__.py  cli.py  cone_state.py  gates.py  metrics.py  types.py  utils.py
