[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "congruity-cone-toy"
version = "0.1.0"
description = "Toy sandbox to test Congruity Cones, history aware admissibility gates, regime shifts, async agents, and pruning metrics vs a baseline."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Andrea Romeo" }]
keywords = ["congruity", "admissibility", "cones", "gating", "toy-sim"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only"
]

[project.scripts]
congruity-cone = "src.cli:main"

[tool.setuptools]
packages = ["src"]
